--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_install:
 script:
   - ./trivy --exit-code 0 --severity HIGH --no-progress trivy-ci-test:${COMMIT}
   - ./trivy --exit-code 0 --severity CRITICAL --no-progress trivy-ci-test:${COMMIT}
+  - ./trivy image -f json -o trivy-scan-report.json --exit-code 0 --severity CRITICAL --no-progress trivy-ci-test:${COMMIT} 
+  - curl -F filedata=@trivy-scan-report.json http://httpbin.org/post
 cache:
   directories:
     - $HOME/.cache/trivy
